--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <div id="main"></div>
     <div id="footer"></div>
     <div id="footer"></div>
+    <div id="footer"></div>
 </body>
 </html>
