--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <div id="footer"></div>
     <div id="footer"></div>
     <div id="footer"></div>
+    <div id="footer"></div>
 </body>
 </html>
