--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <div id="footer"></div>
     <div id="footer"></div>
     <div id="footer"></div>
+    <div id="footer"></div>
 </body>
 </html>
